[project]
name = "beach-please"
version = "0.1.0"
description = ""
authors = [
    {name = "drchiasson",email = "dyami.chiasson@gmail.com"}
]
readme = "README.md"
requires-python = "<4.0.0,>=3.14.6"
dependencies = [
    "langchain-core (>=1.4.9,<2.0.0)",
    "langgraph (>=1.2.9,<2.0.0)",
    "telegram (>=0.0.1,<0.0.2)",
    "python-telegram-bot (>=22.8,<23.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "langchain-google-genai (>=4.2.7,<5.0.0)",
    "opencv-python (>=5.0.0.93,<6.0.0.0)"
]

[tool.poetry]
packages = [{include = "beach_please", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
